--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,40 @@
-body{
-    background-color: #faebd7;
-    color: #3b3b3b;
+body {
+    background-color: #ffffff;
+    color: #000000;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
+
+header {
+    background-color: #24292d;
+    color: #ffffff;
+    display: flex;
+    padding: 15px;
+}
+
+nav {
+    background-color: #1c5e0f;
+    color: #000000;
+    padding: 15px;
+}
+
+div {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+a {
+    color: #000000;
+    text-decoration: none;
+}
+
+iframe {
+    padding: 15px;
+}
+
+aside {
+    width: auto;
 }
 
 ul{
@@ -8,16 +42,58 @@ ul{
     grid-template-columns: auto auto;
 }
 
-li, p{
-    font-size: large;
-    font-family: 'Courier New', Courier, monospace;
+li, p {
+    font-size: 25px;
 }
 
-.title{
-    text-decoration: underline;
+footer {
+    background-color: #24292d;
 }
 
-.img{
+.container{
+    display: flex;
+}
+
+.container_item{
+    width: 80%;
+    padding: 15px;
+}
+
+.title {
+    font-size: 40px;
+}
+
+.img {
     height: 400px;
     width: 800px;
+}
+
+.flag {
+    height: 60px;
+    width: 100px;
+    padding: 10px;
+}
+
+.flex_item{
+    width: 25%;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 27px;
+}
+
+.red {
+    background-color: #ff0000;
+    padding: 10px;
+}
+
+.iconoF {
+    position: fixed;
+    word-wrap: break-word;
+}   
+
+.icon {
+    height: 50px;
+    width: 50px;
+    margin: 10px 30px;
 }
