--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&display=swap');
+
+@font-face {
+    font-family: "robotoSlab";
+    src: url("/font/RobotoSlab.ttf")
+    format("truetype");
+}
+
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "robotoSlab";
     margin: 0%;
     padding: 0%;
 }
@@ -11,19 +19,20 @@ header {
     align-items: center;
     background-color: #24292d;
     color: #ffffff;
-    min-height: 150px;
+    min-height: 20vh;
 }
 
 .flag {
-    height: 80px;
-    width: 135px;
+    height: 90px;
+    width: 145px;
     margin: 10px;
 }
 
 .title {
     width: 50%;
     text-align: center;
-    font-size: 50px;
+    font-family: 'Kanit', sans-serif;
+    font-size: 4em;
     margin: 10px;
 }
 
@@ -45,6 +54,7 @@ nav {
     background-color: #1c5e0f;
     color: #000000;
     padding: 15px;
+    min-height: 15vh;
 }
 
 .divFlex {
@@ -56,7 +66,7 @@ nav {
 .flex_item{
     text-align: center;
     margin: 20px;
-    font-size: 27px;
+    font-size: 2em;
 }
 
 a {
@@ -81,11 +91,12 @@ a {
 
 .subTitle {
     text-align: center;
-    font-size: 40px;
+    font-family: 'Kanit', sans-serif;
+    font-size: 3em;
 }
 
 p, li {
-    font-size: 18px;
+    font-size: 1.2em;
 }
 
 .sectionAside {
@@ -107,7 +118,7 @@ footer {
     align-items: center;
     background-color: #24292d;
     color: #ffffff;
-    min-height: 150px;
+    min-height: 20vh;
 }
 
 .aH3 {
